SONARGRADL-110 Set property `sonar.java.enablePreview` when Java's enablePreview feature is set